--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
 	);
 }
 
-.app {
+.component {
 	width: 350px;
 	height: 250px;
 	background-color: #fff;
@@ -26,16 +26,8 @@ body {
 	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-.initial {
-	text-align: center;
-	font-size: 14px;
-	margin: 0 auto;
-	padding: 5px 0;
-}
-
-.course {
-	min-width: 100px;
-	max-width: fit-content;
+.counter {
+	width: 100px;
 	height: 100px;
 	border-radius: 5px;
 	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
@@ -44,7 +36,6 @@ body {
 	line-height: 100px;
 	font-size: 34px;
 	margin: 0 auto;
-	padding: 0 5px;
 }
 
 .controls {
